src/imports/controls/TabBar.qml
@@ -41,16 +41,14 @@ T.TabBar {
     id: control
 
     implicitWidth: Math.max(background ? background.implicitWidth : 0,
-                            contentItem.implicitWidth + leftPadding + rightPadding)
+                            contentWidth + leftPadding + rightPadding)
     implicitHeight: Math.max(background ? background.implicitHeight : 0,
-                             contentItem.implicitHeight + topPadding + bottomPadding)
+                             contentHeight + topPadding + bottomPadding)
 
     spacing: 1
+    contentHeight: 40
 
     contentItem: ListView {
-        implicitWidth: contentWidth
-        implicitHeight: 40
-
         model: control.contentModel
         currentIndex: control.currentIndex
 
