src/imports/controls/material/TabBar.qml
@@ -43,16 +43,14 @@ T.TabBar {
     id: control
 
     implicitWidth: Math.max(background ? background.implicitWidth : 0,
-                            contentItem.implicitWidth + leftPadding + rightPadding)
+                            contentWidth + leftPadding + rightPadding)
     implicitHeight: Math.max(background ? background.implicitHeight : 0,
-                             contentItem.implicitHeight + topPadding + bottomPadding)
+                             contentHeight + topPadding + bottomPadding)
 
     spacing: 1
+    contentHeight: 48
 
     contentItem: ListView {
-        implicitWidth: contentWidth
-        implicitHeight: 48
-
         model: control.contentModel
         currentIndex: control.currentIndex
 
