tests/auto/controls/data/tst_tabbar.qml
@@ -496,25 +496,47 @@ TestCase {
     function test_layout(data) {
         var control = createTemporaryObject(tabBar, testCase, {spacing: data.spacing, width: 200})
 
+        // remove the implicit size from the background so that it won't affect
+        // the implicit size of the tabbar, so the implicit sizes tested below
+        // are entirely based on the content size
+        control.background.implicitWidth = 0
+
         var tab1 = tabButton.createObject(control, {text: "First"})
         control.addItem(tab1)
         tryCompare(tab1, "width", control.width)
+        compare(control.contentWidth, tab1.implicitWidth)
+        compare(control.implicitWidth, control.contentWidth + control.leftPadding + control.rightPadding)
 
         var tab2 = tabButton.createObject(control, {text: "Second"})
         control.addItem(tab2)
         tryCompare(tab1, "width", (control.width - data.spacing) / 2)
         compare(tab2.width, (control.width - data.spacing) / 2)
+        compare(control.contentWidth, tab1.implicitWidth + tab2.implicitWidth + data.spacing)
+        compare(control.implicitWidth, control.contentWidth + control.leftPadding + control.rightPadding)
 
         var tab3 = tabButton.createObject(control, {width: 50, text: "Third"})
         control.addItem(tab3)
         tryCompare(tab1, "width", (control.width - 2 * data.spacing - 50) / 2)
         compare(tab2.width, (control.width - 2 * data.spacing - 50) / 2)
         compare(tab3.width, 50)
+        compare(control.contentWidth, tab1.implicitWidth + tab2.implicitWidth + tab3.width + 2 * data.spacing)
+        compare(control.implicitWidth, control.contentWidth + control.leftPadding + control.rightPadding)
 
         var expectedWidth = tab3.contentItem.implicitWidth + tab3.leftPadding + tab3.rightPadding
         tab3.width = tab3.implicitWidth
         tryCompare(tab1, "width", (control.width - 2 * data.spacing - expectedWidth) / 2)
         tryCompare(tab2, "width", (control.width - 2 * data.spacing - expectedWidth) / 2)
         compare(tab3.width, expectedWidth)
+        compare(control.contentWidth, tab1.implicitWidth + tab2.implicitWidth + tab3.implicitWidth + 2 * data.spacing)
+        compare(control.implicitWidth, control.contentWidth + control.leftPadding + control.rightPadding)
+
+        tab3.width = undefined
+        control.width = undefined
+
+        control.contentWidth = 300
+        expectedWidth = (control.contentWidth - 2 * data.spacing) / 3
+        tryCompare(tab1, "width", expectedWidth)
+        tryCompare(tab2, "width", expectedWidth)
+        tryCompare(tab3, "width", expectedWidth)
     }
 }
